# piphi_network_zigbee2mqtt

./: .env.example  Dockerfile  README.md  manifest.json  pyproject.toml
.github/workflows/: release.yml
docs/: contract.md  release.md
examples/: command.json  config.json  curl.sh  discovery-request.json  entity-response.json
schema/: piphi-manifest.schema.json
scripts/: release.py  validate.py
src/: behaviors.json
src/piphi_network_zigbee2mqtt/: __init__.py  adapter_detector.py  app.py  bridge_models.py  broker_health.py  config_renderer.py  config_store.py  contract.py  lifecycle.py  main.py  schemas.py  settings.py  state.py  supervisor.py  zigbee2mqtt_mqtt.py
src/piphi_network_zigbee2mqtt/routes/: __init__.py  bridge.py  commands.py  config.py  discovery.py  entities.py  events.py  health.py  runtime.py  telemetry.py
tests/: test_adapter_detector.py  test_bridge_config.py  test_bridge_routes.py  test_config_store.py  test_config_sync.py  test_conformance.py  test_contract.py  test_supervisor.py  test_zigbee2mqtt_mqtt.py
tests/fixtures/: contract-conformance.json
